--- a/app/components/videoModel/styles.module.scss
+++ b/app/components/videoModel/styles.module.scss
@@ -7,6 +7,7 @@
     align-items: center;
     pointer-events: auto;
     cursor: pointer;
+    overflow: hidden;
   }
   
   .modelVideo {
