--- a/app/css/globals.css
+++ b/app/css/globals.css
@@ -35,6 +35,16 @@ main {
   touch-action: pan-y; /* Enable vertical touch scrolling */
   -webkit-overflow-scrolling: touch; /* Enable momentum scrolling on iOS */
 }
+@media (max-width: 1024px) {
+  main {
+    overflow: auto; /* Ensure scrolling is enabled */
+    overflow-x: none; /* Disable horizontal scrolling */
+    overscroll-behavior-y: none; /* Crucial for preventing default scroll */
+    touch-action: pan-y; /* Enable vertical touch scrolling */
+    -webkit-overflow-scrolling: touch; /* Enable momentum scrolling on iOS */
+  }
+  
+}
 
 /* First, style the parent container */
 .infoContainer { /* or whatever your parent element's class is */
